--- a/src/PrivateAdmin/src/app/administration/users/detail/user-detail-guilds/user-detail-guilds.component.html
+++ b/src/PrivateAdmin/src/app/administration/users/detail/user-detail-guilds/user-detail-guilds.component.html
@@ -118,6 +118,23 @@
                 </div>
             </div>
 
+            <div class="row">
+                <div class="col-md-4 mb-3" *ngIf="guild.timeoutHistory && guild.timeoutHistory.length > 0">
+                    <span class="d-block">
+                        Historie umlčení
+                        <a class="smaller no-print" href="javascript:;"
+                            (click)="toggleVisibility('timeoutHistory', i)">{{visibilityText('timeoutHistory', i)}}</a>
+                    </span>
+                    <div *ngIf="isVisible('timeoutHistory', i)">
+                        <ol>
+                            <li *ngFor="let timeout of guild.timeoutHistory" class="fw-bold">
+                                {{timeout.from.binding}} - {{timeout.to.binding}}
+                            </li>
+                        </ol>
+                    </div>
+                </div>
+            </div>
+
             <div class="row" *ngIf="guild.roles.length > 0">
                 <div class="col-md mb-3">
                     <span class="d-block">
