Splited API user satistics by criteria

--- a/src/PrivateAdmin/src/app/administration/statistics/dashboard/dashboard.component.html
+++ b/src/PrivateAdmin/src/app/administration/statistics/dashboard/dashboard.component.html
@@ -7,7 +7,12 @@
         <ng-container
             *ngTemplateOutlet="menuItem;context:{name:'Příkazy (za uživatele)',url:'./interactions-users',id:'interactions-users'}"></ng-container>
         <ng-container *ngTemplateOutlet="menuItem;context:{name:'API',url:'./api',id:'api'}"></ng-container>
-        <ng-container *ngTemplateOutlet="menuItem;context:{name:'API (za uživatele)',url:'./api-users',id:'api-users'}"></ng-container>
+        <ng-container
+            *ngTemplateOutlet="menuItem;context:{name:'API (tabulka) - Privátní administrace',url:'./api-users-v1-private',id:'api-users-v1-private'}"></ng-container>
+        <ng-container
+            *ngTemplateOutlet="menuItem;context:{name:'API (tabulka) - Veřejná administrace',url:'./api-users-v1-public',id:'api-users-v1-public'}"></ng-container>
+        <ng-container
+            *ngTemplateOutlet="menuItem;context:{name:'API (tabulka) - Veřejné API',url:'./api-users-v2',id:'api-users-v2'}"></ng-container>
         <ng-container *ngTemplateOutlet="menuItem;context:{name:'Události',url:'./events',id:'events'}"></ng-container>
         <ng-container *ngTemplateOutlet="menuItem;context:{name:'Průměrné časy',url:'./avgTimes',id:'avgTimes'}"></ng-container>
         <ng-container *ngTemplateOutlet="menuItem;context:{name:'Operace',url:'./operations',id:'operations'}"></ng-container>
