--- a/src/PublicAdmin/src/app/administration/reminders/list/list.component.html
+++ b/src/PublicAdmin/src/app/administration/reminders/list/list.component.html
@@ -21,7 +21,7 @@
                 <tbody>
                     <tr *ngFor="let item of list.items" (click)="showMessage(item, $event)">
                         <td>{{item.id}}</td>
-                        <td>{{item.fromUser?.fullUsername}}</td>
+                        <td>{{item.fromUser?.username}}</td>
                         <td>{{item.at.toLocaleString()}}</td>
                         <td>{{item.postpone}}</td>
                         <td>{{item.notified | czechBooleanPipe}}</td>
