--- a/src/PublicAdmin/src/app/administration/users/detail/user-detail/user-detail.component.html
+++ b/src/PublicAdmin/src/app/administration/users/detail/user-detail/user-detail.component.html
@@ -12,7 +12,7 @@
                 </div>
 
                 <div keyValueItem class="border-bottom mt-2" [key]="'Identifikátor'" [value]="data.id"></div>
-                <div keyValueItem class="border-bottom mt-2" [key]="'Uživatelské jméno'" [value]="data.fullUsername"></div>
+                <div keyValueItem class="border-bottom mt-2" [key]="'Uživatelské jméno'" [value]="data.username"></div>
                 <div keyValueItem class="border-bottom mt-2" [key]="'Stav'" [value]="statusText"></div>
                 <div keyValueItem class="border-bottom mt-2" [key]="'Aktivní zařízení'"
                     [value]="(data.activeClients.length == 0 ? ['Žádné'] : data.activeClients).join(', ')"></div>
